<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginScreenTitle"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/authHint" />

        <EditText
            android:id="@+id/loginEmailEt"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="test@gmail.com"

            android:gravity="right|center_vertical"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/loginPasswordEt"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:text="123456"
            android:gravity="right|center_vertical"
            android:hint="@string/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/loginTitle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/signUpHint"
            android:textAppearance="?textAppearanceBody1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/primary_bold"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/signUp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>