<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?windowBackgroundColorSub"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:scaleType="centerInside"
            app:shapeAppearance="@style/Avatar"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_nike_logo" />

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/guest_user"
            android:textAppearance="?textAppearanceBody1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_divider"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:showDividers="beginning|end|middle">

            <TextView
                android:id="@+id/favoriteLink"
                style="@style/ProfileLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                app:drawableStartCompat="@drawable/ic_favorites" />

            <TextView
                android:id="@+id/orderHistoryLink"
                style="@style/ProfileLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authBtn"
                style="@style/ProfileLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signOut"
                app:drawableStartCompat="@drawable/ic_sign_out" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>