<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.detail.ProductDetailActivity">

    <com.example.nikestore.view.scroll.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.example.nikestore.view.NikeImageView
                   android:id="@+id/productIv"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:viewAspectRatio="1" />
           </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productTitleTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/previousPriceTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="نام محصول" />

                <TextView
                    android:id="@+id/previousPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="125000 تومان" />

                <TextView
                    android:id="@+id/currentPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="@+id/previousPriceTv"
                    app:layout_constraintTop_toBottomOf="@+id/previousPriceTv"
                    tools:text="1100000 تومان" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="?textAppearanceBody2"
                android:text="لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و آینده" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/comments"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/insertComment" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_comment"
                android:clipToPadding="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewAllCommentBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/viewAllComments"
                android:visibility="gone" />
        </LinearLayout>
    </com.example.nikestore.view.scroll.ObservableScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:translationZ="5dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_favorites_24dp" />
    </FrameLayout>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:alpha="0"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="48dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
            tools:text="نام محصول" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addToCartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addToCart"
        android:gravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>